# Prompt-Guard

./: .gitignore  README.md  pyproject.toml
demo/: streamlit_app.py
examples/: basic_usage.py  fastapi_integration.py
promptguard/: __init__.py
promptguard/api/: server.py
promptguard/cli/: main.py
promptguard/core/: detector.py  heuristics.py  patterns.py
tests/: test_api.py  test_detection.py
