[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptguard"
version = "0.1.0"
description = "LLM Input Validation Library for Prompt Injection Detection"
authors = [
  { name = "Ashish", email = "ashishbhargavgampa9@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.optional-dependencies]
demo = ["streamlit"]
test = ["pytest", "pytest-cov", "httpx"]

[project.scripts]
promptguard = "promptguard.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["promptguard*"]
exclude = ["demo*", "examples*", "tests*"]
